clap_derive/tests/ui/option_required.stderr
error: required is meaningless for Option
  --> $DIR/option_required.rs:14:19
   |
14 |     #[clap(short, required = true)]
   |                   ^^^^^^^^
